--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "db:users": "node db_utils.js"
+  },
   "dependencies": {
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "dotenv": "^16.4.5"
   }
 }
